[tool.poetry]
name = "hello-world"
version = "0.2.0"
description = ""
authors = ["it-krystian <it.krystian@gmail.com>"]

[tool.poetry.scripts]
hello-world = "hello_world.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.0.0"
flake8 = "^3.9.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
